[package]
name = "quick-csv"
version = "0.1.6"
authors = ["Johann Tuffe <tafia973@gmail.com"]
description = "quick csv reader and decoder"

repository = "https://github.com/tafia/quick-csv"
documentation = "http://tafia.github.io/quick-csv/quick_csv/index.html"

readme = "README.md"
keywords = ["csv", "delimited", "parser", "serialize"]
license = "MIT"

[dependencies]
rustc-serialize="0.3.19"

[lib]
bench=false
